--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-all</artifactId>
+            <version>4.0</version>
+        </dependency>
     </dependencies>
 </project>
